k3s-setup/app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # ⚙️ CÓ THỂ CHỈNH NẾU MUỐN PORT KHÁC
  selector:
    app: php-apache
