k3s-setup/nginx.yaml
# 2. Deployment cho nginx proxy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

---
# 3. Service NodePort cho nginx proxy
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31234   # Chọn port trong range 30000-32767

---
# 4. Service ClusterIP cho các pod php-apache (nếu chưa có)
apiVersion: v1
kind: Service
metadata:
  name: php-apache
spec:
  selector:
    app: php-apache
  ports:
    - port: 80
      targetPort: 80
